--- a/products/products.html
+++ b/products/products.html
@@ -42,7 +42,7 @@
         <div class="products-container">
             <div class="product">
                 <div class="img elisa">
-                    <img src="/imagenes/elisa1_edited.jpg" alt="Elisa">
+                    <img src="/imagenes/elisa1.jpg" alt="Elisa">
                 </div>
                 <h2>Elisa</h2>
                 <p>US $198.00</p>
