--- a/products/products.html
+++ b/products/products.html
@@ -42,63 +42,63 @@
         <div class="products-container">
             <div class="product">
                 <div class="img elisa">
-                    <img src="/imagenes/elisa1.jpg" alt="Elisa">
+                    <img src="../imagenes/elisa1.jpg" alt="Elisa">
                 </div>
                 <h2>Elisa</h2>
                 <p>US $198.00</p>
             </div>
             <div class="product">
                 <div class="img janelle">
-                    <img src="/imagenes/janelle2_edited.jpg" alt="Janelle">
+                    <img src="../imagenes/janelle2_edited.jpg" alt="Janelle">
                 </div>
                 <h2>Janelle</h2>
                 <p>US $240.00</p>
             </div>
             <div class="product">
                 <div class="img angie">
-                    <img src="/imagenes/pinky_edited.jpg" alt="Angie">
+                    <img src="../imagenes/pinky_edited.jpg" alt="Angie">
                 </div>
                 <h2>Angie</h2>
                 <p>US $120.00</p>
             </div>
             <div class="product">
                 <div class="img monique">
-                    <img src="/imagenes/monique_edited.jpg" alt="Monique Petite">
+                    <img src="../imagenes/monique_edited.jpg" alt="Monique Petite">
                 </div>
                 <h2>Monique Petite</h2>
                 <p>US $180.00</p>
             </div>
             <div class="product">
                 <div class="img estelle">
-                    <img src="/imagenes/estelle2_edited.jpg" alt="Estelle">
+                    <img src="../imagenes/estelle2_edited.jpg" alt="Estelle">
                 </div>
                 <h2>Estelle</h2>
                 <p>US $220.00</p>
             </div>
             <div class="product">
                 <div class="img amelie">
-                    <img src="/imagenes/amelie1_edited_edited.jpg" alt="Amelie">
+                    <img src="../imagenes/amelie1_edited_edited.jpg" alt="Amelie">
                 </div>
                 <h2>Amelie</h2>
                 <p>US $190.00</p>
             </div>
             <div class="product">
                 <div class="img loana">
-                    <img src="/imagenes/loana_edited.jpg" alt="Loana">
+                    <img src="../imagenes/loana_edited.jpg" alt="Loana">
                 </div>
                 <h2>Loana</h2>
                 <p>US $100.00</p>
             </div>
             <div class="product">
                 <div class="img jolie">
-                    <img src="/imagenes/jolie3_edited.jpg" alt="Jolie">
+                    <img src="../imagenes/jolie3_edited.jpg" alt="Jolie">
                 </div>                
                 <h2>Jolie</h2>
                 <p>US $85.00</p>
             </div>
             <div class="product">
                 <div class="img regine">
-                    <img src="/imagenes/regine_edited.jpg" alt="Regine">
+                    <img src="../imagenes/regine_edited.jpg" alt="Regine">
                 </div>
                 <h2>Regine</h2>
                 <p>US $250.00</p>
