--- a/contact/contact.html
+++ b/contact/contact.html
@@ -44,7 +44,7 @@
           <div class="contact-title">
             <h3>We are very excited for hearing about you.</h3>
             <p>For any purchase order or more information, please fill out the form and 
-            click on the Submit button <a href="mailto: inforeginacamarena@gmail.com"> 
+            click on the Submit button, or send us an email directly to <a href="mailto: inforeginacamarena@gmail.com"> 
               inforeginacamarena@gmail.com</a>.</p>
           </div>
           
